# particle_person_tracker

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  package.xml
cxx/: CMakeLists.txt
cxx/bayes_filter/: CMakeLists.txt
cxx/bayes_filter/bayes_filter/: bf_AutoRegressiveModel.h  bf_ConditionalDistr.h  bf_ConditionalDistrMixture.h  bf_Confidence.h  bf_ConfidenceProb.h  bf_DiscreteDistribution.h  bf_Exceptions.h  bf_OptimiserSpsa.h  bi_ObjectObservation.h
cxx/bayes_filter/src/: bf_ConfidenceProb.cc
cxx/bayes_image/: CMakeLists.txt
cxx/bayes_image/bayes_image/: bicv_ARAffineMotionHeadPoseDynamicModel.h  bicv_ARHeadPoseDynamicModel.h  bicv_ColourSegmentationLikelihoodModel.h  bicv_ColourSegmentationTracker.h  bicv_CsMixtureDynamicModel.h  bicv_Exceptions.h  bicv_General.h  bicv_GeneralDynamicModel.h  bicv_GeneralTrackerState.h  bicv_HeadPoseLikelihoodModel.h  bicv_HeadPoseMixtureDynamicModel.h  bicv_HeadPoseMixtureDynamicModelConfig.h  bicv_HeadPoseTracker.h  bicv_HeadPoseTrackerState.h  bicv_HeadPoseTrackerState2RoiConverter.h  bicv_HogModelTrainer.h  bicv_PatchObservation.h  bicv_SkinHogObservation.h  bicv_SkinHogObservationProvider.h  bicv_SkinModelTrainer.h  bicv_StateImageLikelihood.h  bicv_StateImageLikelihood_FCM.h  bicv_TrainingData.h
cxx/bayes_image/src/: bicv_ARHeadPoseDynamicModel.cc  bicv_ColourSegmentationLikelihoodModel.cc  bicv_ColourSegmentationTracker.cc  bicv_CsMixtureDynamicModel.cc  bicv_GeneralDynamicModel.cc  bicv_GeneralTrackerState.cc  bicv_HeadPoseLikelihoodModel.cc  bicv_HeadPoseMixtureDynamicModel.cc  bicv_HeadPoseTracker.cc  bicv_HeadPoseTrackerState.cc  bicv_HeadPoseTrackerState2RoiConverter.cc  bicv_HogModelTrainer.cc  bicv_SkinHogObservationProvider.cc  bicv_SkinModelTrainer.cc  bicv_StateImageLikelihood_FCM.cc
cxx/bayes_image/test/: HeadPoseHogModel.cc  HeadPoseHogModelDiscrimination.cc  HeadPoseSkinModel.cc
cxx/examples/: CMakeLists.txt
cxx/examples/facetrack/: CMakeLists.txt  ColourSegmentationTrackerManager.cc  ColourSegmentationTrackerManager.h  FaceTrackerConfig.cpp  FaceTrackerConfig.hpp  LongTermTrackerManager.cc  LongTermTrackerManager.h  LongTermTrackerManager_ColourSegmentation.cc  LongTermTrackerManager_ColourSegmentation.h  MainModel.cc  MainModel.h  MainModel_ColourSegmentationTracker.cc  MainModel_ColourSegmentationTracker.h  MainWindow.cc  MainWindow.h  MainWindow_ColourSegmentationTracker.cc  MainWindow_ColourSegmentationTracker.h  ModelDumper.cc  ModelDumper.h  ModelDumperCs_TA2Format.cc  ModelDumperCs_TA2Format.h  ModelDumperFactory.cc  ModelDumperFactory.h  ModelDumper_CSVFormat.cc  ModelDumper_CSVFormat.h  ModelDumper_MOTFormat.cc  ModelDumper_MOTFormat.h  ModelDumper_ROSFormat.cc  ModelDumper_ROSFormat.h  ModelDumper_ROSFormat2.cc  ModelDumper_ROSFormat2.h  ModelDumper_TA2Format.cc  ModelDumper_TA2Format.h  NoddingDetector.cc  NoddingDetector.h  TrackerManager.cc  TrackerManager.h  TrackerManagerData.h  TrackerManagerParameters.h
cxx/image_processing/: CMakeLists.txt
cxx/image_processing/image_processing/: Parameters.h  ip_BoundingBox.h  ip_ColorDef.h  ip_ColourSkinFeatureProducer.h  ip_CreateObject2.h  ip_CvCaptureBasedImageProvider.h  ip_DataImageProvider.h  ip_Dense2DMotionProcessor.h  ip_Dense2DMotionProcessorInria.h  ip_Dense2DMotionProcessorInriaConfig.h  ip_DisparityImageProcessor.h  ip_Exceptions.h  ip_FaceDetectorExecutable.h  ip_FileListImageProvider.h  ip_FlippedImageProcessor.h  ip_GradientImageProcessor.h  ip_GrayscaleImageProvider.h  ip_HistogramTemplate.h  ip_HogFeatureParameters.h  ip_HogFeatureProducer.h  ip_HogFeatureProducerRounded.h  ip_Image.h  ip_ImageProvider.h  ip_ImageProviderFactory.h  ip_ImageProviderGroup.h  ip_ImageProviderProxy.h  ip_ImageProviderRegistry.h  ip_ImageProviderType.h  ip_IntegralGradientHistogramProcessor.h  ip_IntegralSkinMaskProcessor.h  ip_InterestPointDetector.h  ip_InterestPointDetector_CV.h  ip_MotionParameters.h  ip_PartialImageProvider.h  ip_ResizableImageProvider.h  ip_RgbImageProcessor.h  ip_RoiWindow.h  ip_RosImageProvider.h  ip_SingleImageProvider.h  ip_SkinColourProcessor.h  (+13 more)
cxx/image_processing/src/: ip_ColourSkinFeatureProducer.cc  ip_CreateObject2.cc  ip_CvCaptureBasedImageProvider.cc  ip_DataImageProvider.cc  ip_Dense2DMotionProcessor.cc  ip_Dense2DMotionProcessorInria.cc  ip_Dense2DMotionProcessorInriaConfig.cc  ip_DisparityImageProcessor.cc  ip_FaceDetectorExecutable.cc  ip_FileListImageProvider.cc  ip_FlippedImageProcessor.cc  ip_GradientImageProcessor.cc  ip_GrayscaleImageProvider.cc  ip_HistogramTemplate.cc  ip_HogFeatureProducer.cc  ip_HogFeatureProducerRounded.cc  ip_ImageProvider.cc  ip_ImageProviderFactory.cc  ip_ImageProviderGroup.cc  ip_ImageProviderProxy.cc  ip_ImageProviderRegistry.cc  ip_IntegralGradientHistogramProcessor.cc  ip_IntegralSkinMaskProcessor.cc  ip_InterestPointDetector.cc  ip_InterestPointDetector_CV.cc  ip_MotionParameters.cc  ip_PartialImageProvider.cc  ip_ResizableImageProvider.cc  ip_RgbImageProcessor.cc  ip_RoiWindow.cc  ip_RosImageProvider.cc  ip_SingleImageProvider.cc  ip_SkinColourProcessor.cc  ip_SkinFeatureProducer.cc  ip_Sparse2DMotionProcessor.cc  ip_Sparse2DMotionProcessor_KLT.cc  ip_Sparse2DMotionTracker.cc  ip_StereoImageProvider.cc  ip_TrackingMemory.cc  ip_TrackingMemoryImage.cc  (+5 more)
cxx/image_processing/test/: DenseMotionProcessorInria.cc  HogFeatureDistance.cc  RoiWindow.cc  SkinColourProcessor.cc  SkinFeatureDistance.cc  TrackingMemoryImage.cc
cxx/opencvplus/: CMakeLists.txt
cxx/opencvplus/opencvplus/: FaceColorModel.h  IdiapCVOpticalFlow.h  cvp_BodyDescriptor.h  cvp_Exceptions.h  cvp_FaceDescriptor.h  cvp_FaceDetector.h  cvp_FaceDetectorCTU.h  cvp_FaceDetectorCV.h  cvp_FaceDetectorFactory.h  cvp_FaceDetectorGroup.h  cvp_FaceDetectorOpenHeadPose.h  cvp_FaceDetectorOpenPose.h  cvp_FaceDetectorPose.h  cvp_FaceDetectorStatistics.h  cvp_FaceDetectorStatisticsStorage.h  cvp_FaceDetectorTorch.h  cvp_HeadPose.h  cvp_HeadPoseDiscreteDomain.h  cvp_HistogramTemplate.h  cvp_HistogramTemplateSimple.h  cvp_Palette.h  (+14 more)
cxx/render/: CMakeLists.txt
cxx/utils/: CMakeLists.txt
cxx/vfoa/: CMakeLists.txt
(+144 files in other folders)
