<package>
  <name>particle_person_tracker</name>
  <version>0.1.0</version>
  <description>Face tracker</description>

  <author>Vasil Khalidov</author>
  <author>Salim Kayal</author>
  <author>Olivier Canévet</author>

  <maintainer email="olivier.canevet@idiap.ch">Olivier Canévet</maintainer>

  <license>Idiap Research Institute</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>perception_msgs</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>perception_msgs</run_depend>


</package>
